# af-mcp-platform

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Containerfile.broker  Containerfile.portal  README.md  lychee.toml  pixi.toml  tbump.toml  zensical.toml
.github/workflows/: chart-lint.yaml  ci.yaml  docker.yaml  docs.yaml  images.yaml
broker/: pyproject.toml
broker/src/af_mcp_broker/: __init__.py  __main__.py  _version.py  app.py  config.py  http.py  identity.py  logging.py  oauth_state.py
broker/src/af_mcp_broker/api/: capabilities.py  credentials.py  health.py  identities.py  oauth21.py  router.py  tokens.py  wellknown.py
broker/src/af_mcp_broker/audit/: __init__.py  logger.py
broker/src/af_mcp_broker/authorization/: __init__.py  base.py  policy.yaml
broker/src/af_mcp_broker/credentials/: __init__.py  base.py  cache.py  oauth21.py  oidc.py  service.py  vault.py  x509.py
broker/src/af_mcp_broker/mcp/: __init__.py  aggregator.py  backends.yaml  registry.py
broker/src/af_mcp_broker/mcp/middleware/: broker_mw.py  entitlement_mw.py  identity_mw.py
broker/tests/: conftest.py  test_api.py  test_audit.py  test_authorization.py  test_config.py  test_credential_cache_rate_limit_config.py  test_dev_bypass.py  test_health.py  test_identities.py  test_identity.py  test_metrics.py  test_oauth21.py  test_oauth21_vault.py  test_oidc.py  test_rate_limit_api.py  test_service.py  test_tokens_api.py  test_wellknown_cimd.py  test_x509.py
charts/af-mcp-platform/: Chart.yaml  values.yaml
charts/af-mcp-platform/ci/: test-values.yaml
charts/af-mcp-platform/templates/: NOTES.txt  _helpers.tpl  broker-deployment.yaml  broker-service.yaml  configmap-backends.yaml  configmap-policy.yaml  configmap-portal-config.yaml  grafanadashboard.yaml  ingress-mcp.yaml  ingress-portal-api.yaml  ingress-portal.yaml  ingress.yaml  networkpolicy.yaml  portal-deployment.yaml  portal-service.yaml  rbac.yaml  serviceaccount.yaml  servicemonitor.yaml
charts/af-mcp-platform/templates/tests/: test-connection.yaml
docs/: adding-a-backend.md  agentgateway-spike.md  architecture.md  auth.md  index.md  local-development.md
k8s/: af-mcp-service-token-sealed.yaml.example
portal/: .prettierignore  .prettierrc.mjs  astro.config.mjs  eslint.config.js  nginx.conf  nginx.conf.template  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  vitest.config.ts
portal/public/: config.json
portal/src/components/: BackendCard.vue  CatalogPage.vue  DashboardCards.vue  IdentitiesPage.vue  IdentityLink.vue  ProxyStatus.vue  ProxyStatusPage.vue  TokensPage.vue  ToolTable.vue
portal/src/layouts/: Base.astro
portal/src/lib/: api.ts  auth.ts  linkedBanner.ts
portal/src/lib/__tests__/: api.test.ts  auth.test.ts  linkedBanner.test.ts
portal/src/pages/: callback.astro  catalog.astro  identities.astro  index.astro  status.astro  tokens.astro
portal/src/styles/: global.css
spikes/credential-isolation/: README.md  conftest.py  test_concurrent_isolation.py
spikes/nfs-subpath/: README.md  mint-job-test.yaml
