[build-system]
requires = ["hatchling>=1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "af-mcp-broker"
dynamic = ["version"]
description = "Credential-brokered MCP gateway for the UChicago ATLAS Analysis Facility"
requires-python = ">=3.12"
# Dependencies are managed by pixi — see pixi.toml at the workspace root.
dependencies = []

[project.scripts]
af-mcp-broker = "af_mcp_broker.__main__:main"

[tool.hatch]
version.source = "vcs"
version.raw-options.root = ".."
# Fallback for untagged checkouts (PRs, shallow clones without tags).
# Tagged releases always override this via git describe.
version.raw-options.fallback_version = "0.0.0"
build.hooks.vcs.version-file = "src/af_mcp_broker/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/af_mcp_broker"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
