[build-system]
requires = ["hatchling>=1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "af-mcp-broker"
dynamic = ["version"]
description = "Credential-brokered MCP gateway for the UChicago ATLAS Analysis Facility"
requires-python = ">=3.12"
# Dependencies are managed by pixi — see pixi.toml at the workspace root.
dependencies = []

[project.scripts]
af-mcp-broker = "af_mcp_broker.__main__:main"

[tool.hatch]
version.source = "vcs"
version.raw-options.root = ".."
# Fallback for untagged checkouts (PRs, shallow clones without tags).
# Tagged releases always override this via git describe.
version.raw-options.fallback_version = "0.0.0"
build.hooks.vcs.version-file = "src/af_mcp_broker/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/af_mcp_broker"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
extend-select = [
  "ARG",  # flake8-unused-arguments
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "EXE",  # flake8-executable
  "G",    # flake8-logging-format
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "RET",  # flake8-return
  "RUF",  # Ruff-specific rules
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "UP",   # pyupgrade
  "YTT",  # flake8-2020
]
ignore = [
  "PLR09",   # Too many <...>
  "PLR2004", # Magic value used in comparison
  "PLC0415", # Lazy imports are deliberate (cycles, optional deps, lifespan)
  "PLW0603", # Module-level singletons (http client, audit logger)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
