[build-system]
requires = ["hatchling>=1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "af-mcp-broker"
dynamic = ["version"]
description = "Credential-brokered MCP gateway for the UChicago ATLAS Analysis Facility"
requires-python = ">=3.12"
# Dependencies are managed by pixi — see pixi.toml at the workspace root.
dependencies = []

[project.scripts]
af-mcp-broker = "af_mcp_broker.__main__:main"

[tool.hatch]
version.source = "vcs"
version.raw-options.root = ".."
# Fallback for untagged checkouts (PRs, shallow clones without tags).
# Tagged releases always override this via git describe.
version.raw-options.fallback_version = "0.0.0"
build.hooks.vcs.version-file = "src/af_mcp_broker/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/af_mcp_broker"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
show-fixes = true
target-version = "py312"

[tool.ruff.lint]
# Ruleset adapted from scientific-python/cookie
# https://github.com/scientific-python/cookie/blob/113bfd515a55969d8177b811e070b1bcd9a3dc51/%7B%7Bcookiecutter.project_name%7D%7D/pyproject.toml#L284-L338
extend-select = [
  "ARG",  # flake8-unused-arguments
  "B",    # flake8-bugbear
  "BLE",  # flake8-blind-except
  "C4",   # flake8-comprehensions
  "DTZ",  # flake8-datetimez
  "EM",   # flake8-errmsg
  "EXE",  # flake8-executable
  "FA",   # flake8-future-annotations
  "FLY",  # flynt
  "FURB", # refurb
  "G",    # flake8-logging-format
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "NPY",  # NumPy specific rules
  "PD",   # pandas-vet
  "PERF", # perflint
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "PYI",  # flake8-pyi
  "Q",    # flake8-quotes
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # Ruff-specific rules
  "SIM",  # flake8-simplify
  "SLOT", # flake8-slots
  "T10",  # flake8-debugger
  "T20",  # flake8-print
  "TC",   # flake8-type-checking
  "TRY",  # tryceratops
  "UP",   # pyupgrade
  "YTT",  # flake8-2020
]
ignore = [
  "PLR09",   # Too many <...>
  "PLR2004", # Magic value used in comparison
  "PLC0415", # Lazy imports are deliberate (cycles, optional deps, lifespan)
  "PLW0603", # Module-level singletons (http client, audit logger)
  "TRY003",  # Long exception messages inline — custom exception classes would be over-engineering
  "EM101",   # String literal in exception — assign-to-variable pattern adds noise, not clarity
  "EM102",   # f-string in exception — same rationale as EM101
  "ISC001",  # Conflicts with the ruff formatter (implicit string concatenation)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG"]
# spikes/ are exploratory validation scripts, not production code — allow
# prints, broad excepts, and other conveniences useful in scratch work.
"spikes/**" = ["ARG", "BLE", "EM", "PLR", "PTH", "T20", "TRY"]

[tool.ruff.lint.isort]
known-first-party = ["af_mcp_broker"]

[tool.pydocstyle]
# Pragmatic starter ruleset. Existing modules were not written with a
# specific docstring convention in mind, so a full check would drown the
# docs CI in noise unrelated to the docs site itself. This selects only the
# checks that catch things every reasonable convention agrees on
# (triple-double-quote style, no backslashes without a raw string). Widen
# this as docstrings get filled in.
select = ["D300", "D301"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
